--- a/package.json
+++ b/package.json
@@ -16,61 +16,22 @@
     "types": "./types/index.d.ts",
     "default": "./dist/cjs/index.js"
   },
+  "types": "./types/index.d.ts",
+  "ava": {
+    "files": [
+      "!**/fixtures/**",
+      "!**/output/**",
+      "!**/helpers/**",
+      "!**/recipes/**",
+      "!**/types.ts"
+    ]
+  },
   "engines": {
     "node": ">=14.0.0"
   },
-  "devDependencies": {
-    "@babel/core": "7.14.3",
-    "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/plugin-proposal-decorators": "7.14.2",
-    "@babel/plugin-transform-runtime": "7.14.3",
-    "@babel/preset-env": "7.14.2",
-    "@babel/preset-react": "7.13.13",
-    "@babel/runtime": "7.14.0",
-    "@carrotsearch/foamtree": "3.5.0",
-    "@rollup/plugin-commonjs": "^23.0.0",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@rollup/plugin-typescript": "^8.5.0",
-    "@types/lodash": "^4.14.186",
-    "@types/opener": "^1.4.0",
-    "@types/uglify-js": "^3.17.1",
-    "@types/ws": "^8.5.3",
-    "autoprefixer": "10.2.5",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
-    "babel-plugin-lodash": "3.3.4",
-    "chai": "4.3.4",
-    "chai-subset": "1.6.0",
-    "classnames": "2.3.1",
-    "core-js": "3.12.1",
-    "css-loader": "5.2.5",
-    "cssnano": "5.0.4",
-    "del": "6.0.0",
-    "del-cli": "^5.0.0",
-    "eslint-plugin-react": "7.23.2",
-    "filesize": "^6.3.0",
-    "globby": "11.0.3",
-    "jest": "27.2.2",
-    "mobx": "5.15.7",
-    "mobx-react": "6.3.1",
-    "postcss": "8.3.0",
-    "postcss-icss-values": "2.0.2",
-    "postcss-loader": "5.3.0",
-    "preact": "10.5.13",
-    "rollup": "^3.0.0-7",
-    "stream-combiner2": "1.1.1",
-    "style-loader": "2.0.0",
-    "terser-webpack-plugin": "5.1.2",
-    "tslib": "^2.4.1",
-    "typescript": "^4.8.3",
-    "url-loader": "4.1.1",
-    "webpack": "5.37.1",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.2"
-  },
   "repository": "https://github.com/Jerry2023/rollup-plugin-bundle-analyzer",
   "scripts": {
-    "build:client": "webpack",
+    "build:client": "vite build",
     "build-all": "pnpm run build:client & pnpm run build",
     "build": "rollup -c",
     "ci:coverage": "nyc pnpm test && nyc report --reporter=text-lcov > coverage.lcov",
@@ -102,7 +63,7 @@
     "size"
   ],
   "peerDependencies": {
-    "rollup": "^1.20.0||^2.0.0||^3.0.0"
+    "rollup": "^4.0.0"
   },
   "peerDependenciesMeta": {
     "rollup": {
@@ -110,23 +71,51 @@
     }
   },
   "dependencies": {
-    "chalk": "^4.1.0",
-    "commander": "^7.2.0",
-    "gzip-size": "^6.0.0",
+    "chalk": "^5.3.0",
+    "commander": "^11.0.0",
+    "gzip-size": "^7.0.0",
     "lodash": "^4.17.21",
     "opener": "^1.5.2",
-    "sirv": "^1.0.7",
-    "terser": "^5.15.1",
-    "ws": "^7.3.1"
+    "sirv": "^2.0.3",
+    "terser": "^5.24.0",
+    "ws": "^8.14.2"
   },
-  "types": "./types/index.d.ts",
-  "ava": {
-    "files": [
-      "!**/fixtures/**",
-      "!**/output/**",
-      "!**/helpers/**",
-      "!**/recipes/**",
-      "!**/types.ts"
-    ]
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.23.3",
+    "@carrotsearch/foamtree": "^3.5.1",
+    "@preact/preset-vite": "^2.7.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@types/lodash": "^4.14.202",
+    "@types/opener": "^1.4.3",
+    "@types/uglify-js": "^3.17.4",
+    "@types/ws": "^8.5.10",
+    "autoprefixer": "^10.4.16",
+    "chai": "^4.3.10",
+    "chai-subset": "^1.6.0",
+    "classnames": "^2.3.2",
+    "core-js": "^3.33.3",
+    "css-loader": "^6.2.7",
+    "cssnano": "^6.0.1",
+    "del": "^7.1.0",
+    "del-cli": "^5.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "filesize": "^10.0.0",
+    "globby": "^14.0.0",
+    "jest": "^29.0.0",
+    "mobx": "^6.11.0",
+    "mobx-react": "^9.1.0",
+    "postcss": "^8.4.31",
+    "postcss-icss-values": "^2.0.2",
+    "postcss-loader": "^7.3.3",
+    "preact": "^10.19.2",
+    "rollup": "^4.5.1",
+    "stream-combiner2": "^1.1.1",
+    "style-loader": "^3.3.3",
+    "tslib": "^2.6.2",
+    "typescript": "5.3.2",
+    "url-loader": "^4.1.1",
+    "vite": "^5.0.2"
   }
 }
